# STP26SeqKit

./: README.md  environment.yml  pyproject.toml
SeqKitSTP/: logger.py
SeqKitSTP/modules/: blocks.py  logger_demo.py
